Bug 65257 - [FILESAVE] DOCX export of background color
Summary: [FILESAVE] DOCX export of background color
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.3.3 release
Hardware: Other Windows (All)
: medium normal
Assignee: Adam CloudOn
URL:
Whiteboard: BSA target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-02 08:12 UTC by Adam CloudOn
Modified: 2013-06-03 09:14 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adam CloudOn 2013-06-02 08:12:32 UTC
Problem description: 
When exporting to DOCX a document with background color - it is not exported to the DOCX.

Steps to reproduce:
1. Create a new document using Writer
2. Set the document's background color to RED
3. Save the document as NEW.DOCX
4. Open NEW.DOCX in Word
5. No background color

Current behavior:
Background color is not exported to DOCX

Expected behavior:
Background color (of the 'default page style') should be exported to the DOCX
Operating System: Windows 8
Version: 4.0.3.3 release
Comment 1 Jorendc 2013-06-02 11:38:28 UTC
Marking it as NEW, see Bug 48212 :-).

Kind regards,
Joren
Comment 2 Commit Notification 2013-06-03 08:03:13 UTC
Adam Co committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=515701a1ff18d04ede235bef862c465adf41062f

fdo#65257 : DOCX not exporting background color



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.