fdo#65257 : DOCX not exporting background color

Signed-off-by: Miklos Vajna <vmiklos@suse.cz>

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx

Change-Id: Ida3f66d5adb063400494e1da589a463b4d7c2a86